Spacing issue solved below navbar on mobile device

--- a/style.css
+++ b/style.css
@@ -1,12 +1,9 @@
-html {
-  margin: 0;
-  padding: 0;
-}
 
 body {
   font-family: "Poppins", sans-serif;
   margin: 0;
   padding-top: 1.5rem;
+  overflow-x: hidden;
 }
 
 /* Default Stylings for all elements */
@@ -67,28 +64,28 @@ nav li {
   margin-top: 46px;
 }
 
-.skewed-white-bg::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: -1;
-  background-color: #fff;
-  transform: rotate(-2deg);
+.skewed-white-bg {
+  background: #FFFFFF;
+  padding: 5px 115px 5px 25px;
+  display: inline-block;
+  transform: rotate(-2.5deg);
 }
 
-.skewed-white-bg::before {
-  content: "";
-  background-color: transparent;
+.skewed-white-bg-text{
+  display: inline-block;
+  transform: rotate(2.5deg);
 }
 
 .skewed-orange-bg {
   background: #e6c744;
-  padding: 5px 95px 5px 11px;
+  padding: 5px 95px 5px 25px;
   display: inline-block;
-  /* transform: rotate(-2.5deg); */
+  transform: rotate(-2.5deg);
+}
+
+.skewed-orange-bg-text{
+  display: inline-block;
+  transform: rotate(2.5deg);
 }
 
 .hero-right-part {
@@ -342,6 +339,20 @@ nav a {
 }
 }
 
+@media screen and (max-width: 1400px) and (min-width: 768px) {
+
+  .hero-heading-text{
+    font-size: 4vw;
+  }
+  .hero-text{
+    font-size: 2vw;
+  }
+
+  .shop-now-btn{
+
+  }
+}
+
 @media screen and (max-width: 1200px) and (min-width: 1001px) {
 /* Navbar links Stylings */
 
@@ -430,6 +441,7 @@ nav a {
     justify-content: center;
     align-items: center;
     border-radius: 15px;
+    margin-top: 15px;
   }
 
   .hero-heading-text {
@@ -476,13 +488,13 @@ nav a {
     height: auto;
   }
 
-  .skewed-orange-bg {
+  /* .skewed-orange-bg {
     display: none;
-  }
+  } */
 
-  .skewed-white-bg {
+  /* .skewed-white-bg {
     display: none;
-  }
+  } */
 
   .logo-wrapper {
     display: flex;
